# ffmpegDemo

./: .gitignore  CMakeLists.txt  UpdateLog.md  base_64.cpp  base_64.h  crypto.cpp  frameSign.cpp  frameSign.h  framecrypto.cpp  framecrypto.h  global.h  main.cpp  mpeg.cpp  signMark.cpp
Video-Crypto_backend/: app.js  binding.gyp  ffmpegDemo  package-lock.json  package.json  video-gyp.cc
Video-Crypto_backend/api/: api.js  blank.js  certificate.js  decrypt.js  display.js  encrypt.js  generate.js  grab_offline.js  grab_online.js  login.js  onchain.js  register.js  test.js
Video-Crypto_backend/config/: basic.js
web/: decrypt.html  encrypt.html  index.html  index1.html  list.html  login.html  play.html  register.html
web/css/: reveal.css  style.css  style_2.css
web/form-1/: cpregister.html  querytest.html  transaction.html
web/form-1/assets/css/: style.css
web/form-1/assets/js/: import.js  scripts.js
web/form-3/: cpcheck.html  query.html  userquery.html
web/form-3/assets/css/: style.css
web/form-3/assets/js/: scripts.js
web/form-3/js/: list.js  userlist.js
web/js/: decrypt.js  encrypt.js  file.js  jquery.reveal.js  login_back.js  login_js.js  regist_js.js
web/js/old/: index.js  script.js
web/video/: ffmpegDemo
